traces/bug_147.txt
examples++-load/gmsh.cpp:252: error: DEAD_STORE
  The value written to &physical (type int) is never used.
Showing all 1 steps of the trace


examples++-load/gmsh.cpp:252:3: Write of unused value
250.   		if(swap) SwapBytes((char*)data, sizeof(int), n);
251.   		int num = data[0];
252.   		int physical = (numTags > 0) ? data[4 - numTags] : 0;
         ^
253.   		int elementary = (numTags > 1) ? data[4 - numTags + 1] : 0;
254.   		int partition = (numTags > 2) ? data[4 - numTags + 2] : 0;
